kubernetes/todoapp/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
  labels:
    app: todoapp
    release: primary
spec:
  selector:
    matchLabels:
      app: todoapp
      release: primary
  template:
    metadata:
      labels:
        app: todoapp
        release: primary
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
    spec:
      containers:
        - name: todoapp
          image: ghcr.io/arodindev/todoapp:v0.0.2
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /api/v1/healthz
              port: 8000
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /api/v1/healthz
              port: 8000
            initialDelaySeconds: 5
          resources:
            limits:
              memory: 250Mi
              cpu: 100m
            requests:
              memory: 50Mi
              cpu: 50m

---

apiVersion: v1
kind: Service
metadata:
  name: todoapp
  labels:
    app: todoapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: todoapp
