kubernetes/todoapp/app/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todoapp
  namespace: todoapp
spec:
  hosts:
  - todoapp.arodindev.com
  gateways:
  - todoapp
  http:
  - route:
    - destination:
        host: todoapp
        subset: primary
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todoapp
  namespace: todoapp
spec:
  host: todoapp
  subsets:
  - name: primary
    labels:
      release: primary

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todoapp
  namespace: todoapp
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - todoapp.arodindev.com
